# NiBu-Camera-Control

./: License  PhotoboxBridge.sln  README.md  README_Photobox_CameraBridge_ApiServer_Worker.txt
APIServer/Photobox.Bridge.ApiServer/: ApiServer_settings.template.json  BridgePipeClient.cs  BridgeSettings.cs  HealthSettings.cs  MjpegStreamer.cs  Photobox.Bridge.ApiServer.csproj  Program.Hosting.cs  Program.SingleInstance.cs  Program.cs  StreamState.cs  WorkerHealthMonitor.cs  WorkerHealthState.cs  WorkerProcessManager.cs  WorkerSettings.cs
APIServer/Photobox.Bridge.ApiServer/Api/: ApiRequestDtos.cs  (+1 more)
APIServer/Photobox.Bridge.Shared/: BridgeProtocol.cs  Commands.cs  Dtos.cs  Photobox.Bridge.Shared.sln
APIServer/Photobox.Bridge.WorkerIpc/: BridgeIpcServer.cs  IBridgeWorker.cs  IpcJson.cs  Photobox.Bridge.WorkerIpc.csproj  Photobox.Bridge.WorkerIpc.sln
Browser/: AppConfig.cs  Fotobox.WebView2Host.csproj  MainForm.cs  Program.cs  init.json
Browser/Browser_Linux/: CMakeLists.txt  init.json
Browser/Browser_Linux/src/: appconfig.cpp  appconfig.h  hostbridge.cpp  hostbridge.h  main.cpp  mainwindow.cpp  mainwindow.h
Browser/Browser_Linux/wwwroot/: index.html
Browser/wwwroot/: index.html
Launcher/: NiBuLauncher.sln
Worker/: stream.html
Worker/Photobox.Bridge.Shared/: BridgeProtocol.cs  CameraSettingsDtoPartial.cs  Commands.cs  Dtos.cs
Worker/Photobox.Bridge.WorkerIpc/: BridgeErrorException.cs  BridgeIpcServer.cs  IBridgeWorker.cs  IpcJson.cs
Worker/Photobox.CameraBridge/: Photobox.CameraBridge.csproj  Photobox.CameraBridge.sln  Program.cs  appsettings.json
(+29 files in other folders)
